code/style.css
body {
    background-color: rgb(220, 220, 220);
}

main {
    background-color: white;
    margin: 80px 240px;
    padding: 30px 0;
    border-style: solid;
    border-width: 0  10px 10px 0;
    border-color: #827A9B;
    font-family: Arial, Helvetica, sans-serif;
}

section {
    text-align: center;
    padding: 15px 50px;
}

h1 {
    color: #827A9B;
    font-family: 'Montserrat';
    text-transform: uppercase;
    text-align: center;
    font-weight: bold;
}

.section-frame {
    display: flex;
    align-items: center;
    justify-content: center;
}

.section-box {
    display: flex;
    justify-content: center;
    flex: 1;
    align-items: center;
    padding: 0 30px;
}

.column {
    align-items: stretch;
    flex-direction: column;
    text-align: left;
    flex-wrap: wrap;
}

.right {
    text-align: right;
    align-items: flex-end;
}

.center{
    text-align: center;
}

/*Images*/

.icon {
    height: 30px; 
    width: auto;
    fill: #827A9B;
    opacity: 80%;
}

#M {
    height: 130px; 
    width: auto;
    fill: #827A9B;
    opacity: 80%;
}

.cheese {
    height: 80px;
    width: auto;
    padding-bottom: 15px;
}

/*svgs*/

.st1 {
    fill:none;stroke:#5B5B5F;
    stroke-width:0.75;
    stroke-miterlimit:10;
}

.st2 {
    opacity:0.6;
    fill:#827A9B;
}

.st3 {
    opacity:0.6;
    fill:#C2B6D5;
}

.cheese .st1 {
    fill:none;
    stroke:#5B5B5F;
    stroke-width:0.75;
    stroke-miterlimit:10;
}

.cheese .st2 {
    opacity:0.6;
    fill:none;
    stroke:#827A9B;
    stroke-width:6;
    stroke-miterlimit:10;
}

/*Presentation section*/

#link-names {
    font-size: 11pt;
    line-height: 26pt;
    text-align: right;
    padding: 0 15px;
}

#links {
    align-items: center;
}

/*Experience*/

#experience .section-box {
    padding: 0 15px;
}

.exp-box {
  display: flex;
  align-items: flex-start;
  flex-direction: row;
}

.exp-box .l {
    padding: 15px 0 0 10px;
    width: 10px;
    height: 20px;
}

.exp-box .r {
    padding: 15px 10px 0 0;
    width: 10px;
    height: 20px;
}

.exp-time {
    color: #827A9B;
}

#experience .vline {
    width: 0px;
    height: 300px;
}

/*Skills*/

.graph {
    padding: 0 0 15px 0;
}

/*Contact form*/

#contact-form {
    flex-direction: column;
}

#contact-form p {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

#contact-form label {
    padding-bottom: 5px;
}

#contact-form input, #contact-form textarea {
    width: 350px;
    padding: 5px;
    border: 1px solid #5B5B5F;
}

#contact-form .btn {
    font-family: 'Montserrat';
    background-color: #827A9B;
    color: white;
    border: none;
}

